# demo-googletest-project-with-cmake

./: CMakeLists.txt  README.md
test/: FooUnitTest.cpp
